--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,11 @@
 yolo*
+*.swp
+package-lock.json
+__pycache__
+.pytest_cache
+.venv
+*.egg-info
+
+# CDK asset staging directory
+.cdk.staging
+cdk.out
